src/objects/maica_cc__Timesheet_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Allowance_Type__c</fullName>
        <label>Allowance Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tc9_et__Allowance_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Break_1_Duration__c</fullName>
        <formula>(Break_1_End__c - Break_1_Start__c) / (1000 * 60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Break 1 Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Break_1_End__c</fullName>
        <label>Break 1 End</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Break_1_Start__c</fullName>
        <label>Break 1 Start</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Break_2_Duration__c</fullName>
        <formula>(Break_2_End__c - Break_2_Start__c) / (1000 * 60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Break 2 Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Break_2_End__c</fullName>
        <label>Break 2 End</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Break_2_Start__c</fullName>
        <label>Break 2 Start</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Merge_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Merge Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Merged_Timesheet_Entry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Merged Timesheet Entry</label>
        <referenceTo>maica_cc__Timesheet_Entry__c</referenceTo>
        <relationshipLabel>Timesheet Entries</relationshipLabel>
        <relationshipName>Source_Timesheet_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sync_Failure_Details__c</fullName>
        <label>Sync Failure Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TC9_Sync_Status__c</fullName>
        <label>2C9 Sync Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Merge Processed</fullName>
                </value>
                <value>
                    <fullName>Merge Failed</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Timesheet_Entry_2C9__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Timesheet Entry 2C9</label>
        <referenceTo>tc9_et__Timesheet_Entry__c</referenceTo>
        <relationshipLabel>Maica Timesheet Entries</relationshipLabel>
        <relationshipName>Maica_Timesheet_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>